<?xml version="1.0" encoding="utf-8"?>
<com.iamkamrul.library.ViewStateConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard_main_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_65sdp"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.Material3.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.Material3.Light" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/unSync_ticket_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            android:backgroundTint="@color/red_dashboard"
            android:background="@drawable/bg_solid_round_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <co.example.assets.CustomBoldTv
                android:id="@+id/unSync_ticket_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/unsync_ticket_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <co.example.assets.CustomTV
                android:id="@+id/total_unsync_sold_ticket_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/total_sold_ticket_title"
                android:textColor="@color/white_n_gray_light_200"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/unSync_ticket_title_tv" />

            <co.example.assets.CustomTV
                android:id="@+id/total_unsync_ticket_fare_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/total_ticket_fare_title"
                android:textColor="@color/white_n_gray_light_200"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/unSync_ticket_title_tv" />

            <co.example.assets.CustomBoldTv
                android:id="@+id/total_unsync_sold_ticket_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toStartOf="@id/total_unsync_ticket_fare_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total_unsync_sold_ticket_title_tv"
                tools:text="200" />

            <co.example.assets.CustomBoldTv
                android:id="@+id/total_unsync_ticket_fare_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/total_unsync_sold_ticket_tv"
                app:layout_constraintTop_toBottomOf="@id/total_unsync_ticket_fare_title_tv"
                tools:text="$ 1000" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sync_ticket_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/bg_solid_round_6"
            android:backgroundTint="@color/green_dashboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unSync_ticket_cl">

            <co.example.assets.CustomBoldTv
                android:id="@+id/sync_ticket_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sync_ticket_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <co.example.assets.CustomTV
                android:id="@+id/total_sync_sold_ticket_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/total_sold_ticket_title"
                android:textColor="@color/white_n_gray_light_200"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sync_ticket_title_tv" />

            <co.example.assets.CustomTV
                android:id="@+id/total_sync_ticket_fare_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/total_ticket_fare_title"
                android:textColor="@color/white_n_gray_light_200"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sync_ticket_title_tv" />

            <co.example.assets.CustomBoldTv
                android:id="@+id/total_sync_sold_ticket_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_35sdp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/total_sync_ticket_fare_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total_sync_sold_ticket_title_tv"
                tools:text="200" />

            <co.example.assets.CustomBoldTv
                android:id="@+id/total_sync_ticket_fare_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/total_sync_sold_ticket_tv"
                app:layout_constraintTop_toBottomOf="@id/total_sync_ticket_fare_title_tv"
                tools:text="$ 1000" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <co.example.assets.CustomTV
        android:id="@+id/total_collectable_amount_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:gravity="center_horizontal"
        android:text="@string/total_collectable_amount_title"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sync_ticket_cl" />

    <co.example.assets.CustomBoldTv
        android:id="@+id/total_collectable_amount_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_collectable_amount_title_tv"
        tools:text="$ 2000" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

</com.iamkamrul.library.ViewStateConstraintLayout>